:sparkles: updated API for cooperativas
